--- a/mandelbrot/Views/Settings.xaml
+++ b/mandelbrot/Views/Settings.xaml
@@ -5,18 +5,14 @@
              xmlns:views="clr-namespace:mandelbrot.Views"
              x:Class="mandelbrot.Views.Settings" x:DataType="views:Settings">
     <ContentPage.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-            <Button Grid.Column="0" Grid.Row="0" Text="Toggle theme" Clicked="OnToggleTheme" />
-
-            <Picker
-                Grid.Column="0" Grid.Row="1"
-                Title="Render approach"
-                ItemsSource="{Binding Approaches, Mode=OneTime}"
-                SelectedItem="{Binding SelectedApproach, Mode=TwoWay}" />
-        </Grid>
+        <ScrollView>
+            <VerticalStackLayout>
+                <Button Text="Toggle theme" Clicked="OnToggleTheme" BackgroundColor="{Binding BackgroundColor}" />
+                <Picker
+                    
+                    ItemsSource="{Binding Approaches, Mode=OneTime}"
+                    SelectedItem="{Binding SelectedApproach, Mode=TwoWay}" />
+            </VerticalStackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
